# waytrogen

./: .gitignore  Cargo.toml  README.md  build.rs  cargo-sources.json  find-missing-translations.bash  flake.nix  go.mod  go.sum  io.github.waytrogen.json  io.github.waytrogen.yaml  meson.build  meson_options.txt  org.Waytrogen.Waytrogen.gschema.xml  shell.nix  update-version.bash  waytrogen.desktop  waytrogen.go  waytrogen.spec
.cargo/: config.toml.disabled
.github/workflows/: build.yml  rust.yml
debian/: changelog  control  copyright  rules
debpkgs/: control  postinst
debpkgs/waytrogen_0.7.0_amd64/DEBIAN/: control
debpkgs/waytrogen_0.7.1_amd64/DEBIAN/: control
debpkgs/waytrogen_0.7.2_amd64/DEBIAN/: control
locales/: en.ftl  es.ftl  waypaper.pot  waytrogen.pot
locales/en/LC_MESSAGES/: waytrogen.mo  waytrogen.po
locales/es/LC_MESSAGES/: waytrogen.mo  waytrogen.po
po/: en.po  es.po  meson.build  update_linguas.bash  waytrogen.pot
src/: app_state.rs  cli.rs  cli_parser.rs  common.rs  database.rs  dotfile.rs  fs.rs  gslapper.rs  hyprpaper.rs  lib.rs  locale.rs  main.rs  main_window.rs  meson.build  monitors.rs  mpvpaper.rs  swaybg.rs  swww.rs  theme.rs  ui_common.rs  wallpaper_changers.rs  waypaper.ui
src/changers/: awww.rs  gslapper.rs  hyprpaper.rs  mod.rs  mpvpaper.rs  swaybg.rs  swww.rs
