[package]
name = "waytrogen"
version = "0.6.3"
edition = "2021"
description = "A GTK graphical user interface for changing your wallpapers on Wayland based compositors."
license = "Unlicense"
readme = "README.md"
authors = ["nikolaizombie1 <fabio.matos999@gmail.com>"]
homepage = "https://github.com/nikolaizombie1/waytrogen"
repository = "https://github.com/nikolaizombie1/waytrogen"
keywords = ["gui", "themeing", "wallpaper", "linux", "wayland"]
categories = ["gui"]

[dependencies]
walkdir = "2"
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_12"] }
anyhow = "1.0.95"
sqlite = "0.36.1"
xdg = "2.5.2"
stderrlog = "0.6.0"
log = "0.4.22"
image = "0.25.5"
async-channel = "2.3.1"
which = "7.0.1"
strum = "0.26.3"
strum_macros = "0.26.4"
regex = "1.11.1"
lazy_static = "1.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
hex = "0.4.3"
clap = { version = "4.5.23", features = ["derive"] }
mktemp = "0.5.1"
gettext-rs = { version = "0.7.2", features = ["gettext-system"] }
rand = "0.8.5"
fuzzy-matcher = "*"

[features]
nixos = []