[package]
name = "waytrogen"
version = "0.9.6"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
iced = { version = "0.14.0", features = ["lazy", "image"] }
log = "0.4.29"
serde = "1.0.228"
serde_json = "1.0.149"
stderrlog = "0.6.0"
gettext-rs = { version = ">= 0.7.0", features = ["gettext-system"] }
anyhow = "1.0.102"
hex = "0.4.3"
rand = "0.10.1"
image = "0.25.10"
lazy_static = "1.5.0"
regex = "1.12.3"
xdg = "3.0.0"
uuid = { version = "1.23.1", features = ["v4"] }
walkdir = "2.5.0"
rusqlite =  { version = ">= 0.29.0" }
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_12"] }
which = "8.0.2"
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
rfd = "0.17.2"
rayon = "1.12.0"
regex_static = "0.1.1"
lazy-regex = "3.6.0"
