[package]
name = "waytrogen"
version = "0.9.6"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
iced = { version = "0.14.0", features = ["lazy", "image"] }
log = "0.4.29"
serde = "1.0.228"
serde_json = "1.0.149"
stderrlog = "0.6.0"
anyhow = "1.0.102"
rand = "0.10.1"
image = "0.25.10"
lazy_static = "1.5.0"
regex = "1.12.3"
xdg = "3.0.0"
uuid = { version = "1.23.1", features = ["v4"] }
walkdir = "2.5.0"
rusqlite =  { version = ">= 0.29.0" }
which = "8.0.2"
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
rfd = { version = "0.17.2", features = ["xdg-portal"] }
rayon = "1.12.0"
regex_static = "0.1.1"
iced_aw = { version = "0.13.1", features = ["menu", "color_picker", "number_input"] }
wayland-client = "0.31.14"
fluent-templates = "0.14.0"
sys-locale = "0.3.2"
fluent-bundle = "0.16.0"
fluent-langneg = "0.14.2"
tokio = { version = "1.52.3", features = ["rt"] }
futures = "0.3.32"
iced_runtime = "0.14.0"

[features]
nixos = []
